fixed some layout issues

--- a/shared/css/bootstrap.css
+++ b/shared/css/bootstrap.css
@@ -1776,7 +1776,7 @@ output {
     color: #555;
 }
 .box {
-    width: 90%
+    width: 100%
 }
 .form-select-control {
     display: inline-block;
