--- a/shared/css/idp.css
+++ b/shared/css/idp.css
@@ -7,6 +7,7 @@
     display: inline-block;
     margin-right: 10px;
     width: 15%;
+    min-width: 150px;
 }
 .menu label
 {
